fixed split on mobile version

--- a/style.css
+++ b/style.css
@@ -634,7 +634,7 @@ footer a {
   #leave-the-casino-button {
     position: relative !important;
     right: 0vw !important;
-    transform: translateY(30%) !important;
+    transform: translateY(40%) !important;
     width: 90vw !important;
     margin: 0 auto !important;
     box-sizing: border-box;
@@ -653,7 +653,7 @@ footer a {
   }
   .controls button {
     margin: 0 5px !important;
-    padding: 10px 15px !important;
+    padding: 5px 15px !important;
   }
   .dealer-container {
     position: relative !important;
@@ -702,7 +702,7 @@ footer a {
     font-size: 0.8em !important;
   }
   #leave-the-casino-button {
-    margin: 20px 0 30px 0 !important;
+    margin: 30px 0 30px 0 !important;
   }
   #popup-leave, #popup-lose, #popup-records {
     width: 85vw !important;
@@ -713,5 +713,13 @@ footer a {
   }
   .img-popup {
     width: 80vw !important;
+  }
+  #player-hand.split-style-left {
+    left: -28vw !important;
+    gap: 0px !important;
+  }
+  .split-style-right {
+    left: 54vw !important;
+    gap: 0px !important;
   }
 }
